[package]
name = "platter"
description = "Load files on web and desktop asynchronously"
version = "0.1.2"
authors = ["Ryan Goldstein <ryanisaacg@gmail.com>"]
categories = ["filesystem"]
keywords = ["async", "file"]
license = "MIT OR Apache-2.0 OR Zlib"
edition = "2018"
readme = "README.md"
repository = "https://github.com/ryanisaacg/platter"

[badges]
maintenance = { status = "actively-developed" }

[features]
"web-sys" = ["web_sys", "js-sys", "wasm-bindgen"]

[dependencies.futures-util-preview]
version = "0.3.0-alpha"
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies.stdweb]
version = "0.4.18"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
package = "web-sys"
version = "0.3.24"
optional = true
features = [
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
    "XmlHttpRequestResponseType",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.js-sys]
version = "0.3.25"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.48"
optional = true
