[package]
name = "platter"
description = "Provide a uniform async interface for file loading between desktop and browser"
version = "0.2.0-alpha0"
authors = ["Ryan Goldstein <ryanisaacg@gmail.com>"]
categories = ["filesystem"]
keywords = ["async", "file"]
license = "MIT OR Apache-2.0 OR Zlib"
edition = "2018"
readme = "README.md"
repository = "https://github.com/ryanisaacg/platter"

[dependencies]
futures-util = { version = "0.3.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.25"
wasm-bindgen = "0.2.48"

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
package = "web-sys"
version = "0.3.24"
features = [
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
    "XmlHttpRequestResponseType",
]

